<resources>
    <string name="app_name">My Weight Goal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_weight_goal">My Weight Goal</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="password_hint">password should be more than 6 characters</string>
    <string name="sing_up_activity_tag">SignUpActivity :</string>
    <string name="create_user_success">createUserWithEmail:success</string>
    <string name="create_user_failure">createUserWithEmail:failure</string>
    <string name="authentication_failed">Authentication failed. Please Try again</string>
    <string name="users">USERS</string>
    <string name="empty_error">Can\'t be empty</string>
    <string name="valid_email">please enter a valid email</string>
    <string name="sign_in_activity_tag">SignInActivity :</string>
    <string name="sign_in_success">signInWithEmail:success</string>
    <string name="sign_in_failure">signInWithEmail:failure</string>
    <string name="user_profile_image">user profile image</string>
    <string name="settings_icon">settings icon</string>
    <string name="random_image_api">https://source.unsplash.com/random</string>
    <string name="main_activity_asynctask">MainActivity AsyncTask :</string>
    <string name="error_image">Error downloading image from</string>
    <string name="internet_connection">There is no Internet Connection</string>
    <string name="your_bmi_is">Your BMI is \n</string>
    <string name="you_should_drink">You should drink \t</string>
    <string name="water_every_day"> \t L of water every day</string>
    <string name="ideal_weight">You Ideal weight is : \t</string>
    <string name="shared_preference_name">my weight goal app</string>
    <string name="bmi">BMI</string>
    <string name="weight">WEIGHT</string>
    <string name="height">HEIGHT</string>
    <string name="bmi_s">bmi</string>
    <string name="height_s">height</string>
    <string name="weight_s">weight</string>
    <string name="kg">\t kg</string>
    <string name="two_digit_decimal">##.##</string>
    <string name="calculate_bmi">calculate BMI</string>
    <string name="save">save</string>
    <string name="url_to_image">urlToImage</string>
    <string name="user_name">name</string>
    <string name="gender">gender</string>
    <string name="age_s">age</string>
    <string name="m">\t m</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
